Fix for logo positioning on mobile

--- a/Frontend/content/css/components.css
+++ b/Frontend/content/css/components.css
@@ -6772,11 +6772,6 @@ body {
   -webkit-touch-callout: none;
    -khtml-user-select:      none;
 }
-#logo {
-  height: 45px;
-  max-height: 45px;
-  padding: 5px 12px 0 0;
-}
 .page {
   display: none;
 }
@@ -6788,6 +6783,14 @@ body {
 }
 .navbar-right {
   padding-right: 15px;
+}
+.navbar-brand > img {
+  display: inline-block;
+  height: 40px;
+  max-height: 40px;
+  padding-right: 12px;
+  margin-top: -10px;
+  vertical-align: top;
 }
 .gap {
   margin-top: 20px;
